fix mobile horizontal scroll on articles

--- a/assets/sass/elements/_footer.scss
+++ b/assets/sass/elements/_footer.scss
@@ -21,21 +21,20 @@
 }
 
 #colophon {
+	padding: 4px;
+	padding-bottom: env(safe-area-inset-bottom);
 	font-size:.8em;
 	color:black;
 }
 
 	#footer-sK {
 		padding:4vw;
+		border-radius: 4px;
+		margin-bottom: 4px;
 		font-size:1.2em;
 		background:rgba(0,0,0,.7);
 		background:linear-gradient(to bottom right, rgba(0,0,0,.75), rgba(0,0,0,.5)) no-repeat;
-		border-width:6px;
-		border-style:dashed;
-		color:rgba(white,.75);
-		border-top:none;
-		border-left:none;
-		border-right:none;
+		color: rgba(255,255,255,.85);
 		overflow:hidden;
 
 		h2 {
@@ -61,16 +60,6 @@
 				max-width:100%;
 			}
 		}
-
-		input {
-			padding:1em;
-			line-height:1;
-			font-size:1.2em;
-			margin:10px;
-			box-shadow:5px 5px 0 0 rgba(0,0,0,.4);
-		}
-
-		input[type=email]{min-width:280px;text-align:center;}
 
 	}
 
