--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -46,6 +46,34 @@ img {
 max-width: 100%;
 height: auto;
 }
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit; 
+  font-size: 100%; 
+  line-height: 1.15; 
+  margin: 0;
+}
+
+button,
+input { 
+  overflow: visible;
+}
+
+button,
+select { 
+  text-transform: none;
+}
+
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
 		
 
 /*--------------------------------------------------------------
